Addititon of CliqueCollection and enhanced CliqueChecker search methods.

--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry excluding="Ramsey.java" kind="src" path="src"/>
 	<classpathentry kind="lib" path="External Jars/mail.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="S:/commons-lang3-3.3.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="S:/commons-lang3-3.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
