--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,30 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-  	<dependency>
-  		<groupId>com.sun.mail</groupId>
-  		<artifactId>javax.mail</artifactId>
-  		<version>1.5.5</version>
-  	</dependency>
+    <dependency>
+  	  <groupId>com.sun.mail</groupId>
+  	  <artifactId>javax.mail</artifactId>
+  	  <version>1.5.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.5</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.logging.log4j</groupId>
+    	<artifactId>log4j-slf4j-impl</artifactId>
+    	<version>2.5</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-api</artifactId>
+    	<version>1.7.21</version>
+    </dependency>
   </dependencies>
 </project>
